cli/tests/snapshot/inputs/errors/accessing_unknown_field.ncl
# capture = 'stderr'
# command = ['eval']
(fun x => x.a) : {} -> _
